# panda_workstation

./: .gitignore  .gitmodules  2026_RAL_V1.txt  Baseline_Heuristic.md  Baseline_TSDF.md  CLAUDE.md  EXP_ActivePerception.md  EXP_ExecuteMultiVLM.md  EXP_Heuristic.md  EXP_MultiVLM.md  EXP_Ours.md  EXP_TSDF.md  Heuristics.md  MovePandaCommands.md  PandaCommands.md  README.md  RUN_5_STEPS.md  Real_Experiment_Pipeline.md  START_AP.md  START_OFFLINE_VLM.md  Setup.md  StartHere.md  StartThinkgrasp.md  TSDF_Voxel.md  Visualize_PLY.md  execute_fetch_direction.py
ros2_ws/src/pymoveit2/: CMakeLists.txt  package.xml
ros2_ws/src/pymoveit2/custom_scripts/: README.md  panda_gripper_control.py  panda_joint_goal.py  panda_planner_joint_goal.py  panda_pose_goal.py  panda_ready.py  sim_panda_gripper_control.py
ros2_ws/src/pymoveit2/examples/: robot_arm_config.py  utils_franka_moveit2.py  utils_math.py
ros2_ws/src/pymoveit2/heuristics/: __init__.py  approach_direction_retrieval.py  common.py  default_mover.py  retrieval_config.yaml  vertical_retrieval.py
ros2_ws/src/pymoveit2/real_vlm_fetching/: .gitignore  README.md
ros2_ws/src/pymoveit2/real_vlm_fetching/configs/: camera_extrinsics.example.json
ros2_ws/src/pymoveit2/real_vlm_fetching/prompts/: occluder_aware_direction_prompt.txt
ros2_ws/src/pymoveit2/real_vlm_fetching/real_vlm_fetching/: camera_clock_mapping.py  (+4 more)
ros2_ws/src/pymoveit2/thinkgrasp/: README.md  __init__.py  client.py  client_realrobot.py  grasp_pipeline_realrobot.py  send_grasp_request.py  send_grasp_request_realrobot.py  sim_grasp_pipeline_realrobot.py
(+168 files in other folders)
